--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!---esto es una de commit-->
+    <!---esto es una prueba de commit-->
 </body>
 </html>
